<resources>
    <string name="app_name">Evnts</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_label">Login</string>
    <string name="SignUp">Signup</string>
    <string name="login_text">Please select your country and enter your phone number to get started.</string>
    <string name="name">Name</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="userName">User Name</string>
    <string name="univName">University Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="register">Register</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="fillEmailAndPass">Please fill email and password.</string>
    <string name="invalidEmail">Invalid email address.</string>
    <string name="navigation_drawer_open">Navigation Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="test">Test</string>
    <string name="free">FREE</string>
    <string name="open">OPEN</string>
    <string name="close">CLOSED</string>
    <string name="no_location">No Location Specified</string>
    <string name="more_details">More Details...</string>
    <string name="PushNotification">Push Notification</string>
    <string name="vibration">vibration</string>
    <string name="comments">Comments</string>
    <string name="no_contact_info">No Contact Info</string>
</resources>
